// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change icon class prefix when using icon-prefix prop 1`] = `
<transition-stub name="r-fade"
                 appear="true"
                 persisted="false"
                 css="true"
                 role="button"
                 tabindex="0"
>
  <div class="r-overlay">
  </div>
</transition-stub>
<transition-stub name="r-fade"
                 appear="false"
                 persisted="false"
                 css="true"
>
  <div role="dialog"
       tabindex="0"
       class="r-popup r-popup--center"
  >
    <i class="r-badge__wrapper my-icon my-icon-cross r-popup__close-icon r-popup__close-icon--top-right r-haptics-feedback"
       role="button"
       tabindex="0"
    >
    </i>
  </div>
</transition-stub>
`;

exports[`should render correct close icon when using close-icon prop 1`] = `
<i class="r-badge__wrapper r-icon r-icon-success r-popup__close-icon r-popup__close-icon--top-right r-haptics-feedback"
   role="button"
   tabindex="0"
>
</i>
`;

exports[`should render overlay-content slot correctly 1`] = `
<transition-stub name="r-fade"
                 appear="true"
                 persisted="false"
                 css="true"
                 role="button"
                 tabindex="0"
>
  <div class="r-overlay">
    Custom Overlay Content
  </div>
</transition-stub>
<transition-stub name="r-fade"
                 appear="false"
                 persisted="false"
                 css="true"
>
  <div role="dialog"
       tabindex="0"
       class="r-popup r-popup--center"
  >
  </div>
</transition-stub>
`;
